Fix visibility on mobile :bug:

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  font-family: 'Courier New Bold', monospace;
+  font-family: 'Courier New', sans-serif;
   background-color: #1d1b00;
   color: #ccc;
   font-size: 18px;
